feat: 智能巡检系统全链路实现（阶段2-7）
- 多实例指标采集：19项指标基于 OB 4.4 实测视图，实例纳管表驱动，MetricNames 常量化
- 巡检主流程：触发→采集→规则判定→结果入库，阈值热调整，判定依据可追溯
- 告警链路：异常生成告警，5分钟窗口收敛，ack确认，通知记录
- AI 诊断：DeepSeek 异步根因分析，幂等防重复调用，失败自动降级
- 巡检报告：健康评分（扣分明细可解释）+ HTML 正式报告导出 + 整改建议
- 前端三页面：看板/巡检/告警（Vue3 + Element Plus + ECharts）
- 43 个单元测试全部通过